tests/baselines/reference/getterThatThrowsShouldNotNeedReturn.errors.txt
tests/cases/compiler/getterThatThrowsShouldNotNeedReturn.ts(2,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/getterThatThrowsShouldNotNeedReturn.ts (1 errors) ====
    class Greeter {
     public get greet(): string {
                ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
      throw ''; // should not raise an error
     }
     public greeting(): string {
      throw ''; // should not raise an error
     }
    }
    